# Github

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
app/: factory.py
app/api/: deps.py
app/api/routes/: auth.py  jobs.py  repositories.py
app/core/: config.py  errors.py  logging.py  security.py
app/db/: session.py
app/models/: __init__.py  file_record.py  ingestion_job.py  repository.py  user.py
app/repositories/: base.py  file_repository.py  job_repository.py  repository_repository.py  user_repository.py
app/schemas/: auth.py  jobs.py  repositories.py  users.py
app/services/: chunking.py  delivery.py  embedding_provider.py  file_reader.py  git_service.py  ignore_rules.py  ingestion.py  vector_store.py
app/tasks/: celery_app.py  ingestion_tasks.py  intelligence_tasks.py
frontend/: Dockerfile  package-lock.json  tsconfig.json
frontend/components/auth/: protected-route.tsx
github_repo_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: seed_demo.py
tests/: conftest.py  test_api.py  test_chunking.py  test_delivery.py  test_duplicate_detection.py  test_ignore_rules.py  test_repository_pattern.py
