[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-repo-analyzer"
version = "0.1.0"
description = "GitHub repository ingestion pipeline with auth, async processing, and vector storage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "bcrypt>=4.2.0",
  "celery>=5.4.0",
  "chromadb>=0.5.5",
  "fastapi>=0.115.0",
  "gitpython>=3.1.43",
  "httpx>=0.27.2",
  "openai>=1.40.0",
  "passlib[bcrypt]>=1.7.4",
  "pathspec>=0.12.1",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.32",
  "tree-sitter>=0.22.3",
  "tree-sitter-languages>=1.10.2",
  "uvicorn[standard]>=0.30.5",
]

[project.optional-dependencies]
test = [
  "fakeredis>=2.24.1",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
